# torrent-builder

./: .gitignore  CMakeLists.txt  PLANNING.md  README.md  REMAINING_GAPS.md
.github/workflows/: build-and-test.yml  release.yml
cmake/: compiler_checks.cmake  libtorrent_check.cmake  version.cmake
include/: batch.hpp  constants.hpp  logger.hpp  output.hpp  preset.hpp  season_pack.hpp  terminal.hpp  torrent_checker.hpp  torrent_creator.hpp  torrent_inspector.hpp  torrent_modifier.hpp  tracker_rules.hpp  updater.hpp  utils.hpp  version.hpp.in
src/: batch.cpp  logger.cpp  output.cpp  preset.cpp  season_pack.cpp  terminal.cpp  torrent_builder.cpp  torrent_checker.cpp  torrent_creator.cpp  torrent_inspector.cpp  torrent_maker.cpp  torrent_modifier.cpp  tracker_rules.cpp  updater.cpp  utils.cpp
tests/: portable.hpp  test_batch.cpp  test_checker.cpp  test_cli.cpp  test_config.cpp  test_inspector.cpp  test_logger.cpp  test_modifier.cpp  test_preset.cpp  test_season_pack.cpp  test_terminal.cpp  test_tracker_rules.cpp  test_updater.cpp  test_utils.cpp
tests/cmake/: test_gcc_accept.cmake  test_gcc_reject.cmake  test_libtorrent_accept.cmake  test_libtorrent_reject.cmake  test_version_fallback.cmake  test_version_override.cmake  test_version_prerelease.cmake
